add slider in mobile-friendly and added poppins font

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
+* {
+  font-family: 'Inter', 'Poppins', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
 .header-blue {
   background: linear-gradient(135deg, #fe2929, #ffb3c5);
   background-color: #184e8e;
   padding-bottom: 80px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 @media (min-width:768px) {
